k8s/deployment.yaml
# apiVersion: apps/v1
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: jpedrob/echo
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
