k8s/ingress-2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-2
  annotations:
    kubernetes.io/ingress.class: "ingress-alb"
    alb.ingress.kubernetes.io/scheme: internal
    # kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-west-1:680615559476:certificate/2530a426-3acd-4792-86dc-3453e44cbfba"
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /ok
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/group.name: "echo"
spec:
  rules:
  - host: "echo-2.p3.footway.com"
    http:
      paths:
      - path: /*
        backend:
          serviceName: echo-2
          servicePort: 80
