k8s/ingress-echo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/group.name: "dev"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
spec:
  rules:
  - host: echo.p3.footway.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: echo
          servicePort: 80
